Fixes the sidebar spacing.

--- a/src/styles/fixDW.css
+++ b/src/styles/fixDW.css
@@ -1,5 +1,5 @@
 .xbm-x-dw .x-sidebar {
-    padding: 20px 0;
+    padding: 25px 0;
     vertical-align: top;
     font-family: "Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
     width: 205px;
